WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149256
Block Objective-C exceptions in DictionaryLookup
https://bugs.webkit.org/show_bug.cgi?id=149256
Summary
Block Objective-C exceptions in DictionaryLookup
Tim Horton
Reported
2015-09-17 02:42:12 PDT
Block Objective-C exceptions in DictionaryLookup
Attachments
Patch
(5.38 KB, patch)
2015-09-17 02:42 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(5.43 KB, patch)
2015-09-17 02:47 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-09-17 02:42:35 PDT
Created
attachment 261382
[details]
Patch
Tim Horton
Comment 2
2015-09-17 02:47:08 PDT
Created
attachment 261383
[details]
Patch
Tim Horton
Comment 3
2015-09-17 16:23:26 PDT
http://trac.webkit.org/changeset/189942
Brent Fulgham
Comment 4
2015-12-11 15:39:47 PST
<
rdar://problem/22577770
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug