Block Objective-C exceptions in DictionaryLookup https://bugs.webkit.org/show_bug.cgi?id=149256

Reviewed by Anders Carlsson.

* editing/mac/DictionaryLookup.mm:
(WebCore::DictionaryLookup::rangeForSelection):
(WebCore::DictionaryLookup::rangeAtHitTestResult):
(WebCore::expandSelectionByCharacters):
(WebCore::DictionaryLookup::stringForPDFSelection):
(WebCore::showPopupOrCreateAnimationController):
(WebCore::DictionaryLookup::hidePopup):
It is possible for Lookup to throw an exception if one of its
related services dies for some reason. This shouldn't take down
our UI process, so block the exceptions.


Canonical link: https://commits.webkit.org/167386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189942 268f45cc-cd09-0410-ab3c-d52691b4dbfc