Source/WebCore/editing/mac/DictionaryLookup.mm
@@ -28,6 +28,7 @@
 
 #if PLATFORM(MAC)
 
+#import "BlockExceptions.h"
 #import "Document.h"
 #import "FocusController.h"
 #import "Frame.h"
@@ -83,9 +84,11 @@ PassRefPtr<Range> DictionaryLookup::rangeForSelection(const VisibleSelection& se
 
     String fullPlainTextString = plainText(makeRange(paragraphStart, paragraphEnd).get());
 
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
     // Since we already have the range we want, we just need to grab the returned options.
     if (Class luLookupDefinitionModule = getLULookupDefinitionModuleClass())
         [luLookupDefinitionModule tokenRangeForString:fullPlainTextString range:rangeToPass options:options];
+    END_BLOCK_OBJC_EXCEPTIONS;
 
     return selectedRange.release();
 }
@@ -127,6 +130,8 @@ PassRefPtr<Range> DictionaryLookup::rangeAtHitTestResult(const HitTestResult& hi
     if (!fullCharacterRange)
         return nullptr;
 
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
+
     NSRange rangeToPass = NSMakeRange(TextIterator::rangeLength(makeRange(fullCharacterRange->startPosition(), position).get()), 0);
 
     String fullPlainTextString = plainText(fullCharacterRange.get());
@@ -140,10 +145,15 @@ PassRefPtr<Range> DictionaryLookup::rangeAtHitTestResult(const HitTestResult& hi
         return nullptr;
 
     return TextIterator::subrange(fullCharacterRange.get(), extractedRange.location, extractedRange.length);
+
+    END_BLOCK_OBJC_EXCEPTIONS;
+    return nullptr;
 }
 
 static void expandSelectionByCharacters(PDFSelection *selection, NSInteger numberOfCharactersToExpand, NSInteger& charactersAddedBeforeStart, NSInteger& charactersAddedAfterEnd)
 {
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
+
     size_t originalLength = selection.string.length;
     [selection extendSelectionAtStart:numberOfCharactersToExpand];
     
@@ -151,10 +161,14 @@ static void expandSelectionByCharacters(PDFSelection *selection, NSInteger numbe
     
     [selection extendSelectionAtEnd:numberOfCharactersToExpand];
     charactersAddedAfterEnd = selection.string.length - originalLength - charactersAddedBeforeStart;
+
+    END_BLOCK_OBJC_EXCEPTIONS;
 }
 
 NSString *DictionaryLookup::stringForPDFSelection(PDFSelection *selection, NSDictionary **options)
 {
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
+
     // Don't do anything if there is no character at the point.
     if (!selection || !selection.string.length)
         return @"";
@@ -186,10 +200,15 @@ NSString *DictionaryLookup::stringForPDFSelection(PDFSelection *selection, NSDic
     
     ASSERT([selection.string isEqualToString:[fullPlainTextString substringWithRange:extractedRange]]);
     return selection.string;
+
+    END_BLOCK_OBJC_EXCEPTIONS;
+    return nil;
 }
 
 static PlatformAnimationController showPopupOrCreateAnimationController(bool createAnimationController, const DictionaryPopupInfo& dictionaryPopupInfo, NSView *view, std::function<void(TextIndicator&)> textIndicatorInstallationCallback)
 {
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
+
     if (!getLULookupDefinitionModuleClass())
         return nil;
 
@@ -232,6 +251,9 @@ static PlatformAnimationController showPopupOrCreateAnimationController(bool cre
 
     [getLULookupDefinitionModuleClass() showDefinitionForTerm:dictionaryPopupInfo.attributedString.get() atLocation:textBaselineOrigin options:mutableOptions.get()];
     return nil;
+
+    END_BLOCK_OBJC_EXCEPTIONS;
+    return nil;
 }
 
 void DictionaryLookup::showPopup(const DictionaryPopupInfo& dictionaryPopupInfo, NSView *view, std::function<void(TextIndicator&)> textIndicatorInstallationCallback)
@@ -241,9 +263,13 @@ void DictionaryLookup::showPopup(const DictionaryPopupInfo& dictionaryPopupInfo,
 
 void DictionaryLookup::hidePopup()
 {
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
+
     if (!getLULookupDefinitionModuleClass())
         return;
     [getLULookupDefinitionModuleClass() hideDefinition];
+
+    END_BLOCK_OBJC_EXCEPTIONS;
 }
 
 PlatformAnimationController DictionaryLookup::animationControllerForPopup(const DictionaryPopupInfo& dictionaryPopupInfo, NSView *view, std::function<void(TextIndicator&)> textIndicatorInstallationCallback)
